# bank

./: .gitignore  BUILD.bazel  Gopkg.toml  README.md  WORKSPACE
cmd/: README.md
cmd/accounts/: BUILD.bazel  main.go
cmd/transfers/: BUILD.bazel  main.go
cockroach-data/roach1/: 000012.sst  IDENTITY  MANIFEST-000008  OPTIONS-000005
core/bedrock/: BUILD.bazel  server.go
core/events/: BUILD.bazel  dispatcher.go  record.go  record_test.go
deployments/: BUILD.bazel  linkerd-local.yaml  local-compose.yaml
deployments/local/: BUILD.bazel  docker-compose.yaml
internal/: README.md
internal/pkg/accounts/: BUILD.bazel  model.go  update_handler.go
internal/pkg/accounts/command/: BUILD.bazel  service.go
internal/pkg/accounts/query/: BUILD.bazel  accounts.go  model.go  service.go  transactions.go
internal/pkg/bedrock/: BUILD.bazel
internal/pkg/events/: BUILD.bazel  consumer.go  dispatcher.go  events.go  record_test.go
internal/pkg/events/accounts/: BUILD.bazel  accounts.go
internal/pkg/events/domain/: BUILD.bazel  accounts.go
internal/pkg/events/transfers/: BUILD.bazel  transfers.go
internal/pkg/transfers/: BUILD.bazel  saga_executor.go  service.go  transfer.go
pb/accounts/: BUILD.bazel  command.pb.go  command.proto  pb.go  query.proto
pb/transfers/: BUILD.bazel  transfers.pb.go  transfers.proto
service.accounts/cmd/accounts/: BUILD.bazel  main.go
service.accounts/internal/pkg/command/: BUILD.bazel  service.go
service.accounts/internal/pkg/models/: BUILD.bazel  account.go  update_handler.go
service.accounts/internal/pkg/query/: BUILD.bazel  accounts.go  service.go  transactions.go
service.accounts/pb/: BUILD.bazel  query.pb.go
service.accounts/pkg/events/: BUILD.bazel  accounts.go
service.projections/: BUILD
service.projections/src/main/java/com/bank/service/projections/: BinaryRecord.java  JSONRecord.java  Projections.java  Record.java
service.transfers/cmd/transfers/: BUILD.bazel  main.go
service.transfers/internal/pkg/transfers/: BUILD.bazel  saga_executor.go  service.go  transfer.go
service.transfers/pb/: BUILD.bazel  pb.go
service.transfers/pkg/events/: BUILD.bazel  transfers.go
services/accounts/: BUILD.bazel  main.go
services/projection/: BUILD.bazel  main.go
services/transfers/: BUILD.bazel  main.go
tools/: bazel.rc
