load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "github.com/vectorhacker/bank/core/bedrock",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_hashicorp_consul//api:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
