load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "consumer.go",
        "dispatcher.go",
        "events.go",
        "record.go",
    ],
    importpath = "github.com/vectorhacker/bank/core/events",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/Shopify/sarama:go_default_library",
        "//vendor/github.com/bsm/sarama-cluster:go_default_library",
        "//vendor/github.com/satori/go.uuid:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["record_test.go"],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/satori/go.uuid:go_default_library"],
)
