load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "consumer.go",
        "dispatcher.go",
        "events.go",
        "record.go",
    ],
    importpath = "github.com/vectorhacker/bank/core/events",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bsm_sarama_cluster//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_satori_go_uuid//:go_default_library",
        "@com_github_shopify_sarama//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["record_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_satori_go_uuid//:go_default_library"],
)
