package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library")

# gazelle:proto disable

go_library(
    name = "go_default_library",
    srcs = [
        "command.pb.go",
        "pb.go",
        "query.pb.go",
    ],
    importpath = "github.com/vectorhacker/bank/service.accounts/pb",
    visibility = ["//:__subpackages__"],
    deps = [
        "//vendor/github.com/golang/protobuf/proto:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
    ],
)
