load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/vectorhacker/bank/services/projection",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/jdextraze/go-gesclient:go_default_library",
        "//vendor/github.com/jdextraze/go-gesclient/client:go_default_library",
        "//vendor/github.com/jdextraze/go-gesclient/flags:go_default_library",
    ],
)

go_binary(
    name = "projection",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
