load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "model.go",
        "update_handler.go",
    ],
    importpath = "github.com/vectorhacker/bank/internal/pkg/accounts",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/pkg/events:go_default_library",
        "//internal/pkg/events/accounts:go_default_library",
        "//vendor/github.com/jinzhu/gorm:go_default_library",
        "//vendor/github.com/satori/go.uuid:go_default_library",
    ],
)
