load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "github.com/vectorhacker/bank/internal/pkg/bedrock",
    visibility = ["//:__subpackages__"],
    deps = [
        "//vendor/github.com/hashicorp/consul/api:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
    ],
)
