package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/vectorhacker/bank/service.accounts/cmd/accounts",
    deps = [
        "//core/bedrock:go_default_library",
        "//core/events:go_default_library",
        "//service.accounts/internal/pkg/command:go_default_library",
        "//service.accounts/internal/pkg/models:go_default_library",
        "//service.accounts/pb:go_default_library",
        "//service.accounts/pkg/events:go_default_library",
        "@com_github_jinzhu_gorm//:go_default_library",
        "@com_github_jinzhu_gorm//dialects/postgres:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "accounts",
    embed = [":go_default_library"],
)
