package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/vectorhacker/bank/service.transfers/cmd/transfers",
    deps = [
        "//core/bedrock:go_default_library",
        "//core/events:go_default_library",
        "//service.accounts/pb:go_default_library",
        "//service.transfers/internal/pkg/transfers:go_default_library",
        "//service.transfers/pb:go_default_library",
        "//service.transfers/pkg/events:go_default_library",
        "//vendor/github.com/jinzhu/gorm:go_default_library",
        "//vendor/github.com/jinzhu/gorm/dialects/postgres:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
    ],
)

go_binary(
    name = "transfers",
    embed = [":go_default_library"],
)
