load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["transfers.go"],
    importpath = "github.com/vectorhacker/bank/internal/pkg/events/transfers",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/pkg/events:go_default_library",
        "//vendor/github.com/satori/go.uuid:go_default_library",
    ],
)
