load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["service.go"],
    importpath = "github.com/vectorhacker/bank/service.accounts/internal/pkg/command",
    visibility = ["//:__subpackages__"],
    deps = [
        "//core/events:go_default_library",
        "//service.accounts/internal/pkg/models:go_default_library",
        "//service.accounts/pb:go_default_library",
        "//service.accounts/pkg/events:go_default_library",
        "//vendor/github.com/jinzhu/gorm:go_default_library",
        "//vendor/github.com/satori/go.uuid:go_default_library",
    ],
)
