load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "account.go",
        "update_handler.go",
    ],
    importpath = "github.com/vectorhacker/bank/service.accounts/internal/pkg/models",
    visibility = ["//service.accounts:__subpackages__"],
    deps = [
        "//core/events:go_default_library",
        "//service.accounts/pkg/events:go_default_library",
        "@com_github_jinzhu_gorm//:go_default_library",
        "@com_github_satori_go_uuid//:go_default_library",
    ],
)
