load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "accounts.go",
        "model.go",
        "service.go",
        "transactions.go",
    ],
    importpath = "github.com/vectorhacker/bank/service.accounts/internal/pkg/query",
    visibility = ["//:__subpackages__"],
    deps = [
        "//core/events:go_default_library",
        "//service.accounts/pb:go_default_library",
        "//service.accounts/pkg/events:go_default_library",
        "//vendor/github.com/jinzhu/gorm:go_default_library",
        "//vendor/github.com/satori/go.uuid:go_default_library",
    ],
)
