load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "saga_executor.go",
        "service.go",
        "transfer.go",
    ],
    importpath = "github.com/vectorhacker/bank/service.transfers/internal/pkg/transfers",
    visibility = ["//service.transfers:__subpackages__"],
    deps = [
        "//core/events:go_default_library",
        "//service.accounts/pb:go_default_library",
        "//service.transfers/pb:go_default_library",
        "//service.transfers/pkg/events:go_default_library",
        "@com_github_jinzhu_gorm//:go_default_library",
        "@com_github_satori_go_uuid//:go_default_library",
    ],
)
